--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 				Project Info
 				<div style="padding:1em">
-					<div class="label">Generated at:        </div><span>{{ site.time }}</span><br>
+					<div class="label">Generated at:        </div><span>{{ "%m/%d/%y %H:%M:%S %Z" | date }}</span><br>
 					<div class="label">GitHub:              </div><a href="https://github.com/chino/pxwgl-net">Project Page</a></span><br>
 				</div>
 
